<resources>
    <string name="app_name">Mad Project</string>
    <string name="cardtype">Card Type</string>
    <string name="entercardtype2">Enter card type</string>
    <string name="cardholdersName">Cardholder\'s Name</string>
    <string name="addcard">Add Card Details</string>
    <string name="cardno1">Card Number</string>
    <string name="expdate">Expiry Date</string>
    <string name="entercardno">Enter Card Number</string>
    <string name="cvcno">CVC Number</string>
    <string name="submit">submit</string>
    <string name="checkcardcred">Check Card Credentials</string>
    <string name="nxt">Next</string>
    <string name="carddetails">Card Details</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="paymentsuccessful">Payment Successful</string>
    <string name="ok">OK</string>
    <string name="clickhere">Click here</string>
    <string name="deliverydetails">Delivery Details</string>
    <string name="firstname1">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="address">Address</string>
    <string name="streetaddress">Street Address</string>
    <string name="streetline2">Street Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State/Province</string>
    <string name="postalcode">Postal / Zip Code</string>
    <string name="phonenumber">Phone Number</string>
    <string name="itemamount1">Item Amount :</string>
    <string name="deliveryfee1">Delivery Fee :</string>
    <string name="totalpayment1">Total Payment :</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="pay">Pay</string>
    <string name="dashboard">Dashboard</string>
    <string name="thriftstore">Thrift Store</string>
    <string name="handicraftstore">Handicraft Store</string>
    <string name="creditcarddetails">Credit Card Details</string>
    <string name="lesthelp1">Lets Help Each Other!</string>
    <string name="feedback">Feedback</string>
    <string name="successfullydeleted">Successfully Deleted</string>
    <string name="card_cred">If yoou haven\'t added a card</string>
    <string name="entercardtype">Enter Card Type</string>
    <string name="entercardnumber">Enter Card Number</string>
    <string name="entercardholdersname">Enter Cardholder Name</string>
    <string name="enterexpirydate">Enter Expiry Date</string>
    <string name="entercvcnumber">Enter CVC Number</string>
    <string name="orangebackgound">Orange Background</string>
    <string name="backimg">backimg</string>
    <string name="profileicon">profileicone</string>
    <string name="notificationicon">noticication icon</string>
    <string name="blank" />
    <string name="enterfirstname">Enter First Name</string>
    <string name="enterlastname">Enter Last Name</string>
    <string name="enterphonenumber">Enter Phone Number</string>
    <string name="viewcarddetails">View Card Details</string>
    <string name="cardid">Card Id</string>
    <string name="updatecarddetails">Update Card Details</string>
    <string name="cardid2">Card Id:</string>
    <string name="cardtype2">Card Type:</string>
    <string name="cardno2">Card Number:</string>
    <string name="cardholdersname">Card H</string>
    <string name="cardholdersname2">Cardholder\'s Name:</string>
    <string name="expdate2">Expiry Date:</string>
    <string name="cvcno2">CVC Number:</string>
    <string name="title_activity_thrift_store">ThriftStore</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>