<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:srcCompat="@drawable/_2f9a138"
        android:contentDescription="@string/orangebackgound" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/backimg" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="205dp"
        android:layout_height="43dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-25dp"
        android:text="@string/carddetails"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginStart="350dp"
        android:layout_marginTop="-45dp"
        app:srcCompat="@drawable/baseline_account_circle_24"
        android:contentDescription="@string/profileicon" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="-33dp"
        app:srcCompat="@drawable/baseline_notifications_none_24"
        android:contentDescription="@string/notificationicon" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/cardtype"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="370dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/entercardtype"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/cardno1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="370dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/entercardnumber"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/cardholdersName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="370dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/entercardholdersname"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/expdate"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="370dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enterexpirydate"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/cvcno"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="370dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/entercvcnumber"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/button3"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/update"
        android:background="@android:color/holo_orange_light" />
    />

    <Button
        android:id="@+id/button4"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="-50dp"
        android:text="@string/delete"
        android:background="@android:color/holo_orange_light" />

    />
</LinearLayout>