<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:srcCompat="@drawable/_2f9a138" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-50dp"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="205dp"
        android:layout_height="43dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-25dp"
        android:text="@string/deliverydetails"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="-45dp"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="-33dp"
        app:srcCompat="@drawable/baseline_notifications_none_24" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="45dp"
        android:text="@string/firstname1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="270dp"
        android:layout_height="49dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="-50dp"
        android:ems="10"
        android:hint="@string/enterfirstname"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/lastname"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="268dp"
        android:layout_height="49dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="-50dp"
        android:ems="10"
        android:hint="@string/enterlastname"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="119dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/phonenumber"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etPhoneNo"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="-50dp"
        android:ems="10"
        android:hint="@string/enterphonenumber"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="97dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/address"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etAddress1"
        android:layout_width="370dp"
        android:layout_height="49dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/streetaddress"
        android:inputType="textPostalAddress"
        android:textSize="14sp" />

    <EditText
        android:layout_width="370dp"
        android:layout_height="49dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/streetline2"
        android:inputType="none"
        android:text="@string/streetline2"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etState"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="-41dp"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etZipCode"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/postalcode"
        android:inputType="numberSigned"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/nxt" />
</LinearLayout>