<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:srcCompat="@drawable/_2f9a138" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-50dp"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-25dp"
        android:text="@string/checkcardcred"
        android:textSize="@dimen/textsize_20"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="-40dp"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="-33dp"
        app:srcCompat="@drawable/baseline_notifications_none_24" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/cardno1"
        android:textSize="@dimen/textsize_16" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="370dp"
        android:layout_height="49dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/entercardno"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/cvcno" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="370dp"
        android:layout_height="49dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/entercvcnumber"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnFetchData"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="22dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/nxt" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="218dp"
        android:layout_height="35dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="-5dp"
        android:text="@string/card_cred"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="-43dp"
        android:text="@string/clickhere" />
    />
</LinearLayout>