<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ViewCardDetails">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:srcCompat="@drawable/_2f9a138" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="179dp"
        android:layout_height="39dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-50dp"
        android:text="@string/viewcarddetails"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/btnBack2"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-37dp"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="-33dp"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="-33dp"
        app:srcCompat="@drawable/baseline_notifications_none_24" />

    <TextView
        android:id="@+id/textView2d"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="58dp"
        android:text="@string/cardid2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/etCardId"
        android:layout_width="290dp"
        android:layout_height="35dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="-36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/cardtype2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/etCardType"
        android:layout_width="286dp"
        android:layout_height="35dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="-36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/cardno2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/etCardNo"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="-36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/cardholdersname2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/etCHname"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginLeft="178dp"
        android:layout_marginTop="-36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="106dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/expdate2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/etExpDate"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="-36dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="121dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/cvcno2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/etCVCNo"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="-36dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnUpdateData2"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="45dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/update" />

    <Button
        android:id="@+id/btnDeleteData"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="-50dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/delete" />

</LinearLayout>