<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="114dp"
        android:layout_height="56dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cardtype" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="240dp"
        android:layout_height="47dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="-50dp"
        android:text="@string/entercardtype2" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="163dp"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cardholdersName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="-50dp" />
</LinearLayout>